# C-to-Odin

./: CMakeLists.txt  README.md  clang.odin  test.odin  test.rs  test_syntax.something  tester.odin  testing.odin  testing_again.odin
dependencies/clang/: LLVM-C.lib  LTO.lib  Remarks.lib  libiomp5md.lib  liblldb.lib  libomp.lib
dependencies/dyncall/: dyncall.odin
dependencies/include/: clangV2.odin
dependencies/include/clang/: clang.odin
dependencies/include/clang-c/: clang.odin
dependencies/include/src/: main.odin
odin-test/: build.bat
odin-test/src/: main.odin
src/: another_test.odin  data_types.hpp  essential_macros.hpp  functions.hpp  keywords.hpp  macro_parser.hpp  main.cpp  print_functions.hpp  test.ast  test.c  test.h  test.odin
tests/: another_test.h  test.c
